# gngt

./: .bazelrc  .firebaserc  .gitignore  .ng-dev-config.ts  .stylelintrc.json  .travis copy.yml  .travis.yml  .yarnrc  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  WORKSPACE  angular-tsconfig.json  build-config.js  firebase-ion.json  firebase-mat.json  firebase.json  gulpfile.js  index.bzl  merge-config.js  package.json  packages.bzl  pkg-externals.bzl  rollup-globals.bzl  stylelint-config.json  tsconfig.json  tslint.json
integration/linker/: BUILD.bazel
src/: BUILD.bazel  README.md  bazel-tsconfig-build.json  bazel-tsconfig-test.json  circular-deps-test.conf.js  module-typings.d.ts
src/core/: BUILD.bazel  config.bzl  package.json  public-api.ts  tsconfig-build.json  tsconfig-tests.json  tsconfig.json  typings.d.ts  version.ts
src/demo-app/: system-config.ts  tsconfig-aot.json  tsconfig-build.json  tsconfig.json
src/demo-app-ion/: admin-mocks.ts  demo-app-module.ts  demo-gngt-module.ts  index.html  main-aot.ts  main.ts  system-config.ts  tsconfig-aot.json  tsconfig-build.json
src/demo-app-mat/: demo-app-module.ts  demo-gngt-module.ts  index.html  system-config.ts  tsconfig-aot.json  tsconfig-build.json
src/dev-app/: BUILD.bazel  admin-mocks.ts  dev-app.ts  esbuild.config.mjs  index.html  main-module.ts  main.ts  routes.ts  tsconfig.json
src/dev-app-ion/: BUILD.bazel  admin-mocks.ts  dev-app-module.ts  dev-app.html  dev-app.scss  dev-app.ts  empty.ts  gngt-module.ts  index.html  main-aot.ts  main-module.ts  main.ts  routes.ts  system-config.ts  tsconfig-aot.json  tsconfig-build.json  tsconfig.json
src/dev-app-mat/: BUILD.bazel  admin-mocks.ts  dev-app-module.ts  dev-app.html  dev-app.ts  gngt-module.ts  index.html  main-aot.ts  main-module.ts  main.ts  routes.ts  system-config.ts  system-rxjs-operators.ts  tsconfig-aot.json  tsconfig-build.json  typings.d.ts
src/e2e-app/: BUILD.bazel  devserver-configure.js  e2e-app-module.ts  e2e-app.ts  esbuild.config.mjs  index.html  main-module.ts  protractor.conf.js  rollup-with-linker.config.js  routes.ts  system-config.ts  tsconfig-build.json  tsconfig.json
src/e2e-app-ion/: BUILD.bazel  devserver-configure.js  e2e-app-module.ts  e2e-app.ts  index.html  main-module.ts  protractor.conf.js  system-config.ts  test_suite.bzl  tsconfig-build.json  tsconfig.json
src/e2e-app-mat/: BUILD.bazel  devserver-configure.js  e2e-app-module.ts  index.html  main-module.ts  system-config.ts  test_suite.bzl  tsconfig-build.json  tsconfig.json
src/gngt-examples/: BUILD.bazel  config.bzl  example-data.ts  package.json  tsconfig.json
src/ionic/: BUILD.bazel  config.bzl  index.ts  package.json  tsconfig-build.json  tsconfig-tests.json  tsconfig.json
src/ionic-examples/: BUILD.bazel  gngt-module.ts  ionic-module.ts  package.json  tsconfig-build.json  tsconfig.json
src/material/: BUILD.bazel  config.bzl  index.ts  package.json  public-api.ts  tsconfig-build.json  tsconfig-tests.json  tsconfig.json
src/material-examples/: BUILD.bazel  example-module.ts  gngt-module.ts  load-example.ts  package.json  tsconfig-build.json  tsconfig.json
src/universal-app/: BUILD.bazel  kitchen-sink-root.ts  prerender.ts
src/universal-app-ion/: BUILD.bazel  DEBUG.md  index.html  tsconfig-build.json  tsconfig-prerender.json  tsconfig.json
src/universal-app-mat/: BUILD.bazel  DEBUG.md  index.html  tsconfig-build.json  tsconfig-prerender.json  tsconfig.json
test/: BUILD.bazel  angular-test-init-spec.ts  karma-system-config.js  karma-test-shim.js  karma.conf.js  protractor.ion.conf.js  protractor.mat.conf.js  requirejs-init.ts  test-blocklist.ts  webpack_bundle.bzl
tools/: BUILD.bazel  bazel-stamp-vars.sh  create-system-config.bzl  defaults.bzl  gngt_setup_workspace.bzl  sass_bundle.bzl  sass_generate_binaries.bzl  system-config-tmpl.js  system-rxjs-operators.js  webpack.bundle.config.js
tools/angular/: BUILD.bazel  create_linker_esbuild_plugin.mjs  esbuild.config.mjs  index.bzl
tools/axe-protractor/: BUILD.bazel  index.js
tools/cherry-pick-patch/: github.ts
tools/dashboard/: angular.json  package.json
tools/dev-server/: dev-server.ts  ibazel.ts  launcher_template.sh  main.ts
tools/dgeni/: bazel-bin.ts  docs-package.ts  index.bzl  index.ts  tsconfig.json
tools/esbuild/: BUILD.bazel  custom_resolve_esbuild_plugin.mjs  esbuild-amd-config.mjs  index.bzl
tools/example-module/: BUILD.bazel  bazel-bin.ts  example-module.template  generate-example-module.ts  parse-example-file.ts
tools/gulp/: gulpfile.ts  packages.ts  tsconfig.json
tools/highlight-files/: BUILD.bazel  highlight-files.ts
tools/legacy-release/: publish-release.ts  stage-release.ts
tools/linker-process/: linker-process.ts
tools/markdown-to-html/: BUILD.bazel  docs-marked-renderer.spec.ts  docs-marked-renderer.ts  transform-markdown.ts  tsconfig.json
tools/npm/: check-npm.js  date-fns-bundle.js  gic-angular-bundle.js  gic-core-bundle.js  gic-core-loader-bundle.js  ionic-angular-bundle.js  ionic-core-bundle.js  ionic-core-loader-bundle.js  package.json  pouchdb-find-bundle.js  url-parse-bundle.js  uuid-bundle.js
tools/package-docs-content/: BUILD.bazel  index.bzl  tsconfig.json
tools/package-tools/: build-bundles.ts  build-config.ts  build-release.ts  compile-entry-point.ts  entry-point-package-json.ts  rollup-globals.ts  secondary-entry-points.ts  ts-compile.ts  version-placeholders.ts
tools/postinstall/: apply-patches.js  patch-packages.js  update-ngcc-main-fields.js
tools/public_api_guard/: BUILD.bazel  generate-guard-tests.bzl
tools/release/: BUILD.bazel  base-release-task.ts  changelog.ts  check-release-output.ts  publish-release.ts  stage-release.ts
tools/rxjs/: rxjs_shims.js
tools/spec-bundling/: esbuild.config-tmpl.mjs  index.bzl
tools/stylelint/: loader-rule.js  no-ampersand-beyond-selector-start.ts  no-concrete-rules.ts  no-import.ts  no-nested-mixin.ts  no-top-level-ampersand-in-mixin.ts  no-unused-import.ts  selector-no-deep.ts  single-line-comment-only.ts  theme-mixin-api.ts
tools/third-party-libs/: BUILD.bazel  index.bzl  (+14 more)
(+582 files in other folders)
