load("//:rollup-globals.bzl", "ROLLUP_GLOBALS")
load("//src/core:config.bzl", "CORE_ENTRYPOINTS")
load("//src/ionic:config.bzl", "IONIC_ENTRYPOINTS", "IONIC_TESTING_ENTRYPOINTS")
load("//src/material:config.bzl", "MATERIAL_ENTRYPOINTS", "MATERIAL_TESTING_ENTRYPOINTS")

package(default_visibility = ["//visibility:public"])

exports_files([
    "LICENSE",
    "scss-bundle.config.json",
])

genrule(
    name = "rollup_globals",
    outs = ["rollup_globals.json"],
    cmd = "echo '%s' > $@" % ROLLUP_GLOBALS,
)

entryPoints = ["core/%s" % e for e in CORE_ENTRYPOINTS] + \
              ["ionic/%s" % e for e in IONIC_ENTRYPOINTS + IONIC_TESTING_ENTRYPOINTS] + \
              ["material/%s" % e for e in MATERIAL_ENTRYPOINTS + MATERIAL_TESTING_ENTRYPOINTS]

genrule(
    name = "entry_points_manifest",
    outs = ["entry_points_manifest.json"],
    cmd = "echo '%s' > $@" % entryPoints,
)
