package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")
load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")

ts_library(
    name = "sass_bundle_lib",
    srcs = ["sass_bundle.ts"],
    tsconfig = "bazel-tools-tsconfig.json",
    deps = [
        "@npm//@types/node",
        "@npm//scss-bundle",
    ],
)

# Executable for the custom sass_bundle rule (see sass_bundle.bzl).
nodejs_binary(
    name = "sass_bundle",
    data = [
        ":sass_bundle_lib",
        "@npm//scss-bundle",
    ],
    entry_point = "gngt/tools/sass_bundle.js",
)
