package(default_visibility=["//visibility:public"])

load("@angular//:index.bzl", "ng_package")
load("//:packages.bzl", "CORE_PACKAGES", "CORE_TARGETS", "ROLLUP_GLOBALS")
load("//tools:defaults.bzl", "ng_module")

# Export the Core tsconfig so that subpackages can reference it directly.
exports_files(["tsconfig-build.json"])

# Root "@gngt/core" entry-point that does not re-export individual entry-points.
ng_module(
  name = "core",
  srcs = glob(["*.ts"], exclude=["**/*.spec.ts"]),
  module_name = "@gngt/core",
  deps = ["//src/core/%s" % p for p in CORE_PACKAGES],
  tsconfig = ":tsconfig-build.json",
)

# Creates the @gngt/core package published to npm.
ng_package(
  name = "npm_package",
  srcs = ["package.json"],
  entry_point = "src/core/public_api.js",
  globals = ROLLUP_GLOBALS,
  deps = CORE_TARGETS,
  # TODO(devversion): Use the npm package for publishing. Right now this is disabled because
  # we build using AOT for serving & testing, but the `ng_package` rule should not include factory
  # files.
  tags = ["manual"],
)