package(default_visibility = ["//visibility:public"])

load("//:packages.bzl", "CORE_PACKAGES", "CORE_TARGETS", "ROLLUP_GLOBALS")
load("//tools:defaults.bzl", "ng_module", "ng_package")

# Root "@gngt/core" entry-point that does not re-export individual entry-points.
ng_module(
    name = "core",
    srcs = glob(
        ["*.ts"],
        exclude = ["**/*.spec.ts"],
    ),
    module_name = "@gngt/core",
    deps = [
        "@npm//@angular/core",
    ],
)

filegroup(
    name = "overviews",
    srcs = ["//src/core/%s:overview" % name for name in CORE_PACKAGES],
)

# Creates the @gngt/core package published to npm.
ng_package(
    name = "npm_package",
    srcs = ["package.json"],
    entry_point = ":public-api.ts",
    globals = ROLLUP_GLOBALS,
    # TODO(devversion): Use the npm package for publishing. Right now this is disabled because
    # we build using AOT for serving & testing, but the `ng_package` rule should not include factory
    # files.
    tags = ["manual"],
    deps = CORE_TARGETS,
)
