load("//src/core:config.bzl", "CORE_ENTRYPOINTS", "CORE_SCSS_LIBS", "CORE_TARGETS")
load("//tools:defaults.bzl", "ng_package", "ts_library")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "core",
    srcs = glob(
        ["*.ts"],
        exclude = ["**/*.spec.ts"],
    ),
    deps = ["@npm//@angular/core"],
)

# Creates the @angular/cdk package published to npm.
ng_package(
    name = "npm_package",
    srcs = ["package.json"],
    data = CORE_SCSS_LIBS,
    entry_point = ":public-api.ts",
    tags = ["release-package"],
    deps = CORE_TARGETS,
)

filegroup(
    name = "overviews",
    # Only secondary entry-points declare overview files currently. Entry-points
    # which contain a slash are not in the top-level and do not have an overview.
    srcs = ["//src/core/%s:overview" % ep for ep in CORE_ENTRYPOINTS if not "/" in ep],
)
