package(default_visibility = ["//visibility:public"])

load("//:packages.bzl", "CORE_TARGETS", "MATERIAL_TARGETS")
load("//tools:defaults.bzl", "ng_module")
load("//tools:sass_generate_binaries.bzl", "sass_generate_binaries")

# Generate sass binaries for all nested SCSS files.
sass_generate_binaries(
    "dev_app_mat_scss",
    glob(["**/*.scss"]),
)

ng_module(
    name = "dev-app-mat",
    srcs = glob(
        ["**/*.ts"],
        exclude = [
            "system-config.ts",
            "system-rxjs-operators.ts",
        ],
    ),
    assets = glob(["**/*.html"]) + [":dev_app_mat_scss"],
    deps = [
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/elements",
        "@npm//@angular/forms",
        "@npm//@angular/material",
        "@npm//@angular/platform-browser",
        "@npm//@angular/platform-browser-dynamic",
        "@npm//@angular/router",
        "@npm//@ngx-translate/http-loader",
        "@npm//rxjs",
        "//src/material-examples:examples",
    ] + CORE_TARGETS + MATERIAL_TARGETS,
)
