package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:defs.bzl", "ts_devserver")
load("//tools:defaults.bzl", "ng_module")
load("//:packages.bzl", "ANGULAR_LIBRARY_UMDS", "LIBRARIES_UMDS")

exports_files([
    "protractor.conf.js",
    "start-devserver.js",
])

ng_module(
    name = "e2e-app-ion",
    srcs = glob(["**/*.ts"]),
    assets = glob(
        [
            "**/*.html",
            "**/*.css",
        ],
        exclude = ["index.html"],
    ),
    deps = [
        "//src/ionic-examples:examples",
        "//src/ionic/calendar",
        "//src/material/calendar",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/elements",
        "@npm//@angular/forms",
        "@npm//@angular/platform-browser",
        "@npm//@angular/router",
        "@npm//@ionic/angular",
        "@npm//@ngx-translate/core",
        "@npm//@ngx-translate/http-loader",
    ],
)

ts_devserver(
    name = "devserver",
    # Root paths can be used simplify the loading of files from external Bazel repositories
    # (such as the Bazel managed deps repository called "npm")
    additional_root_paths = [
        "npm/node_modules",
    ],
    # Name of the AMD module that should be required on page load.
    entry_module = "gngt/src/e2e-app-mat/main",
    port = 4200,
    # Scripts which will be included in the serving_path bundle after "require.js" has been
    # loaded.
    scripts = [
        ":devserver-configure.js",
        "//tools/rxjs:rxjs_umd_modules",
        "@npm//:node_modules/tslib/tslib.js",
    ] + ANGULAR_LIBRARY_UMDS + LIBRARIES_UMDS,
    # Serving path of the bundle that serves all files specified in "deps" and "scripts".
    serving_path = "/bundle.js",
    # Files which should be provided by Bazel when running the devserver. These are not
    # automatically served, but can be loaded manually through HTTP requests.
    static_files = [
        "@npm//zone.js",
        "@npm//core-js",
        "@npm//hammerjs",
        "@npm//@ngx-translate/core",
        ":index.html",
    ],
    # Dependencies that produce JavaScript output will be automatically included in the
    # serving_path bundle
    deps = [":e2e-app-ion"],
)
