package(default_visibility=["//visibility:public"])

load("@build_bazel_rules_typescript//:defs.bzl", "ts_devserver")
load("//tools:defaults.bzl", "ng_module")

ng_module(
  name = "e2e-app-mat",
  srcs = glob(["**/*.ts"]),
  assets = glob(["**/*.html", "**/*.css"], exclude = ["index.html"]),
  deps = [
    "@angular//packages/common/http",
    "@angular//packages/core",
    "@angular//packages/forms",
    "@angular//packages/platform-browser",
    "@angular//packages/platform-browser/animations",
    "@angular//packages/router",
    "@angular_material//src/lib/button",
    "@angular_material//src/lib/list",
    "@ngx_translate_core//:core",
    "@gngtdeps//@ngx-translate/http-loader",
    "//src/material/login",
    "//src/material-examples:examples",
  ]
)

ts_devserver(
    name = "devserver",
    port = 4200,
    # Name of the AMD module that should be required on page load.
    entry_module = "gngt/src/e2e-app-mat/main",
    # Serving path of the bundle that serves all files specified in "deps" and "scripts".
    serving_path = "/bundle.js",
    # Root paths can be used simplify the loading of files from external Bazel repositories
    # (such as the Bazel managed deps repository called "gngtdeps")
    additional_root_paths = [
      "gngtdeps/node_modules",
      "test",
    ],
    # Files which should be provided by Bazel when running the devserver. These are not
    # automatically served, but can be loaded manually through HTTP requests.
    static_files = [
      "@gngtdeps//zone.js",
      "@gngtdeps//core-js",
      "@gngtdeps//hammerjs",
      "@gngtdeps//@ngx-translate/core",
      "//test:date_fns_bundle",
      ":index.html",
    ],
    # Scripts which will be included in the serving_path bundle after "require.js" has been
    # loaded.
    scripts = [
      ":devserver-configure.js",
      "@gngtdeps//node_modules/tslib:tslib.js",
    ],
    # Dependencies that produce JavaScript output will be automatically included in the
    # serving_path bundle
    deps = [":e2e-app-mat"],
)
