load("@npm//@bazel/concatjs:index.bzl", "concatjs_devserver")
load("//:packages.bzl", "getAngularUmdTargets")
load("//tools:defaults.bzl", "ng_module")
load("//tools/third-party-libs:index.bzl", "get_amd_bundles")

package(default_visibility = ["//visibility:public"])

# List of dependencies that are referenced in the `index.html` file.
devserverIndexHtmlDependencies = [
    "@npm//zone.js",
    "@npm//core-js-bundle",
    "@npm//@angular/material",
    "@npm//@ionic/angular",
    ":index.html",
]

exports_files([
    "devserver-configure.js",
    "protractor.conf.js",
    "start-devserver.js",
])

ng_module(
    name = "e2e-app",
    testonly = True,
    srcs = glob(
        ["**/*.ts"],
        exclude = ["test-util/**"],
    ),
    assets = glob(
        [
            "**/*.html",
            "**/*.css",
        ],
        exclude = ["index.html"],
    ),
    deps = [
        "//src/gngt-examples/private",
        "//src/ionic/calendar",
        "//src/material/calendar",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/forms",
        "@npm//@angular/platform-browser",
        "@npm//@angular/router",
        "@npm//@ionic/angular",
        "@npm//@ngx-translate/core",
        "@npm//@ngx-translate/http-loader",
    ],
)

concatjs_devserver(
    name = "devserver",
    testonly = True,
    additional_root_paths = [
        "npm/node_modules",
    ],
    entry_module = "gc_gngt/src/e2e-app/main",
    port = 4200,
    # Scripts which will be included in the serving_path bundle after RequireJS has been loaded.
    scripts = [
        ":devserver-configure.js",
        "//tools/rxjs:rxjs_umd_modules",
        "@npm//:node_modules/tslib/tslib.js",
    ] + getAngularUmdTargets() + get_amd_bundles(),
    # Name of the generated `concatjs` bundle that is built based on the labels in `deps` and `scripts`.
    serving_path = "/bundle.js",
    static_files = devserverIndexHtmlDependencies,
    tags = ["manual"],
    deps = [":e2e-app"],
)
